--- a/aliem/styles/collections/sidebar.styl
+++ b/aliem/styles/collections/sidebar.styl
@@ -2,11 +2,12 @@
 
 #sidebar
     margin-top: 20px
-    p, div, a
-        font-size: 0.95em
+    font-size: 12px
+    line-height: 1.5em
     h4
         font-weight: 600
         text-transform: uppercase
+        font-size: 14px
         letter-spacing: 0.1em
         margin-bottom: 10px
     .widget
@@ -24,7 +25,6 @@
             padding: 10px
             box-shadow: $shadow-2dp
             border-radius: 2px
-            font-size: 0.85em
             p
                 margin-bottom: 5px
     .widget-title
@@ -45,7 +45,6 @@
             min-width: 75px
         .popular-post-holder
             padding: 5px
-            line-height: 1.5em
             &.comments
                 padding: 0
         .popular-post-image
