--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -33,6 +33,24 @@
     .page
         @extends .single .post
 
+.search
+    .fusion-timeline-date
+        background: transparent
+    .fusion-post-timeline
+        background: white
+        border: 0
+        border-radius: 2px
+        box-shadow: $shadow-2dp
+        .fusion-post-content-wrapper
+            padding: 20px
+            padding-bottom: 5px
+        .fusion-meta-info
+            margin: 0
+        .fusion-post-content-container
+            display: none
+        .fusion-content-sep
+            height: 0
+
 #main
     padding-top: 135px
     background: $secondary
