--- a/aliem/styles/style.styl
+++ b/aliem/styles/style.styl
@@ -41,6 +41,15 @@ input
     background: $primary
     color: white
 
+dt
+    font-weight: 600
+dd
+    margin: 0 0 20px 10px
+    font-style: italic
+    &::before
+        content: '➥'
+        padding-right: 10px
+
 table
     border-collapse: collapse
     border-spacing: 0
