Switch to yarn + update theme + add editor style

--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -58,25 +58,12 @@
 #content
     margin-top: 20px
     width: 75%
-    line-height: 1.64em
-    h1
-        font-size: 1.8em
-        line-height: 1.25em
-        font-weight: 600
-    h2:not(.entry-title)
-        font-weight: 400
-    h3
-        font-weight: 600
-        text-transform: uppercase
-        letter-spacing: .1em
-    h4
-        font-weight: 700
     ul > li
-        line-height: 1.6em !important
+        line-height: 1.7em !important
         margin-bottom: 0px !important
     blockquote
         border-left: 4px solid $primary
-        font: italic 13px/20px 'Open Sans',arial,helvetica,sans-serif
+        font: italic 13px/20px 'Open Sans', 'Helvetica Neue', helvetica, arial, sans-serif
         img
             display: inline-block
     iframe
