--- a/aliem/styles/colors.styl
+++ b/aliem/styles/colors.styl
@@ -2,8 +2,9 @@ $primary = #00b092
 $input-focus = #00caa7
 $secondary = #F2F2F2 // Header background
 $tertiary = #F5F5F5
-$font-primary = #333333
+$font-primary = #333
 $font-gray = #706d6e // header font color
+$font-secondary = #666
 
 $feminem-secondary = #ccccff
 
