Add flex classes

--- a/aliem/styles/style.styl
+++ b/aliem/styles/style.styl
@@ -11,6 +11,7 @@
 @require 'collections/content'
 @require 'collections/sidebar'
 @require 'collections/footer'
+@require 'collections/flex'
 
 body,
 button,
