--- a/aliem/styles/style.styl
+++ b/aliem/styles/style.styl
@@ -12,145 +12,17 @@
 @require 'collections/sidebar'
 @require 'collections/footer'
 @require 'collections/flex'
+@require 'collections/tables'
+@require 'collections/typography'
 
-body,
-button,
-select,
-textarea
-    color: $font-primary
-    font-family: 'Open Sans', 'Helvetica Neue', helvetica, arial, sans-serif
-    font-size: 16px
-    font-weight: 400
-    line-height: 1.7
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6
-    clear: both
-    line-height: 1.4
-    margin: 0 0 0.75em
-    padding: 1.5em 0 0
-    &:first-child
-        padding-top: 0
-
-h1
-    // font-size: 24px
-    font-size: 1.5rem
-    font-weight: 300
-    // &:not(.entry-title)
-    //     text-transform: uppercase
-    //     letter-spacing: 0.1em
-    &.entry-title
-        font-weight: 600
-        margin: 0
-        a
-            color: $font-primary
-            transition: .1s
-            &:hover
-                text-decoration: none
-                transition: .1s
-                color: $primary
-
-h2
-    color: $font-secondary
-    // font-size: 20px
-    font-size: 1.25rem
-    font-weight: 300
-
-h3
-    color: $font-primary
-    // font-size: 18px
-    font-size: 1.125rem
-    font-weight: 300
-
-h4
-    color: $font-primary
-    // font-size: 16px
-    font-size: 1rem
-    font-weight: 800
-
-h5
-    color: $font-secondary
-    // font-size: 13px
-    font-size: 0.8125rem
-    font-weight: 800
-    letter-spacing: 0.15em
-    text-transform: uppercase
-
-h6
-    color: $font-primary
-    // font-size: 15px
-    font-size: 0.9375rem
-    font-weight: 800
-
-sub, sup
-    font-size: 75%
-    line-height: 0
-    position: relative
-    vertical-align: baseline
-sub
-    bottom: -.25em
-sup
-    top: -0.5em
-
-a, .fusion-content-widget-area .widget li a
-    color: $primary
-    &:hover
-        color: darken($primary, 10)
-strong
-    font-weight: 600
-
+// Form Controls
 input
     &:focus
         outline-color: $input-focus
 
-::selection
-    background: $primary
-    color: white
-
-dt
-    font-weight: 600
-dd
-    margin: 0 0 20px 10px
-    font-style: italic
-    &::before
-        content: '➥'
-        padding-right: 10px
-
-table
-    border-collapse: collapse
-    border-spacing: 0
-    width: 100%
-    margin-bottom: 1em
-    border: none
-    box-shadow: $shadow-2dp
-    thead>tr>td,
-    tbody>tr>th
-        background-color: $primary
-        text-align: left
-        font-weight: bold
-        color: white
-    tr
-        &:nth-child(odd)
-            background-color: $tertiary
-        td, th
-            padding: 0.8em
-            vertical-align: top
-    tfoot
-        font-size: 0.8em
-        tr
-            background-color: white !important
-            border-top: solid darken($secondary, 10) 1px
-        td
-            text-align: justify
-            padding: 0 .8em
-            color: $font-gray
-        p
-            margin: 10px 0 !important
-            line-height: 1.5em
+// Overrides
+.fusion-content-widget-area .widget li a
+    @extends a
 
 @media (max-width: 800px)
     table
