--- a/aliem/styles/editor-style.styl
+++ b/aliem/styles/editor-style.styl
@@ -15,9 +15,10 @@ blockquote.alignright
     width: 34%
 
 img
-    height: auto /* Make sure images are scaled correctly. */
-    width: inherit  /* Make images fill their parent's space. Solves IE8. */
-    max-width: 100% /* Adhere to container width. */
+    height: auto
+    max-width: 100%
+    &:not([src$='.svg'])
+        width: inherit
 
 embed,
 iframe,
