Fix input focus outline thickness. Closes #52

--- a/aliem/styles/style.styl
+++ b/aliem/styles/style.styl
@@ -19,6 +19,7 @@
 input
     &:focus
         outline-color: $input-focus
+        outline-width: medium
 
 // Overrides
 .fusion-content-widget-area .widget li a
