Style changes. Closes #52, #54, #47

--- a/aliem/styles/style.styl
+++ b/aliem/styles/style.styl
@@ -1,7 +1,7 @@
 @import url('../Avada/style.css')
 
-@require 'colors'
-@require 'variables'
+@require 'collections/colors'
+@require 'collections/variables'
 @require 'collections/social-icons'
 @require 'collections/avada'
 @require 'collections/plugins'
