--- a/aliem/styles/editor.styl
+++ b/aliem/styles/editor.styl
@@ -1,4 +1,6 @@
-@require 'colors'
+@require 'collections/colors'
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&subset=greek,greek-ext');
 
 body
     background-color: white
@@ -25,6 +27,9 @@ iframe,
 object
     margin-bottom: 1.5em
     max-width: 100%
+
+.wpview
+    text-align: center
 
 .mejs-container
     margin-bottom: 1.5em
