--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -58,16 +58,17 @@
 #content
     margin-top: 20px
     width: 75%
-    iframe
-        max-width: 90%
-        height: 400px
-        margin: 0 5%
-    for v, k in 600 480
-        @media (max-width: v+0px)
-            iframe
-                height: 300 - (k*100)px
-    .twitter-tweet-rendered
-        margin: auto
+    .post-content
+        iframe
+            max-width: 90%
+            height: 400px
+            margin: 0 5%
+        for v, k in 600 480
+            @media (max-width: v+0px)
+                iframe
+                    height: 300 - (k*100)px
+        .twitter-tweet-rendered
+            margin: auto
 
 .pagination
     width: 100%
