--- a/aliem/styles/collections/variables.styl
+++ b/aliem/styles/collections/variables.styl
@@ -10,3 +10,15 @@ $shadow-6dp = 0 6px 10px 0 rgba(0, 0, 0, $shadow-key-penumbra-opacity), 0 1px 18
 $shadow-8dp = 0 8px 10px 1px rgba(0, 0, 0, $shadow-key-penumbra-opacity), 0 3px 14px 2px rgba(0, 0, 0, $shadow-ambient-shadow-opacity), 0 5px 5px -3px rgba(0, 0, 0, $shadow-key-umbra-opacity)
 $shadow-16dp = 0 16px 24px 2px rgba(0, 0, 0, $shadow-key-penumbra-opacity), 0  6px 30px 5px rgba(0, 0, 0, $shadow-ambient-shadow-opacity), 0  8px 10px -5px rgba(0, 0, 0, $shadow-key-umbra-opacity)
 $shadow-24dp = 0 9px 46px  8px rgba(0, 0, 0, $shadow-key-penumbra-opacity), 0 11px 15px -7px rgba(0, 0, 0, $shadow-ambient-shadow-opacity), 0 24px 38px  3px rgba(0, 0, 0, $shadow-key-umbra-opacity)
+
+$shadow-transition = all 0.3s cubic-bezier(.25,.8,.25,1)
+
+// Mixins
+noselect()
+    -webkit-appearance: none
+    -webkit-touch-callout: none
+    -webkit-user-select: none
+    -khtml-user-select: none
+    -moz-user-select: none
+    -ms-user-select: none
+    user-select: none
