Fix mobile menu toggles

--- a/aliem/styles/collections/avada.styl
+++ b/aliem/styles/collections/avada.styl
@@ -377,7 +377,7 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
         width: auto
 
     .fusion-blog-layout-large-alternate
-        margin-bottom: 55px
+        margin-bottom: 0
 
     .fusion-body .fusion-blog-layout-large-alternate .fusion-post-content
         margin: 0
