--- a/aliem/styles/collections/header.styl
+++ b/aliem/styles/collections/header.styl
@@ -76,14 +76,24 @@
 // Mobile Menus
 .fusion-mobile-nav-holder
     background: white
+    .sub-menu
+        box-shadow: inset 0px 2px 2px 0 rgba(0,0,0,0.14)
+    .fusion-menu
+        &>li>ul
+            background: $secondary
+        &>li>ul>li>ul
+            background: white
+        &>li:last-of-type
+            border-bottom: 0
 
 .fusion-mobile-nav-item
+    border-bottom: 1px solid darken($secondary, 10)
     a
         color: $font-primary
         font-size: 12px
-        border-color: darken($secondary, 10)
         height: 35px
         line-height: 35px
+        display: inline-block
         &:before
             color: $font-primary
             content: none !important
