Add plotly integration

--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -115,10 +115,10 @@
     #main
         padding-top: 0
 
-    // Better image alignment on mobile TODO: This looks strange. Might wanna test this
     .post .post-content img
         float: none
-        display: table-header-group
+        display: block
+        margin: auto auto 1.5em
     #content
         blockquote
             margin-left: 0
