--- a/aliem/styles/collections/home.styl
+++ b/aliem/styles/collections/home.styl
@@ -2,7 +2,7 @@
 .archive
     .post
         background: white
-        padding: 20px
+        padding: 20px 20px 0 20px
         border-radius: 2px
         box-shadow: $shadow-2dp
         margin-bottom: 20px
