--- a/aliem/styles/style.styl
+++ b/aliem/styles/style.styl
@@ -15,6 +15,8 @@
 @require 'collections/tables'
 @require 'collections/typography'
 
+// TODO: look into creating a custom aliem loading animation for plots
+
 // Form Controls
 input
     &:focus
