--- a/aliem/styles/collections/home.styl
+++ b/aliem/styles/collections/home.styl
@@ -1,11 +1,12 @@
 .home,
 .archive
     .post
+        margin-bottom: 20px
+        // &:not(.fusion-archive-description)
         background: white
         padding: 20px 20px 0 20px
         border-radius: 2px
         box-shadow: $shadow-2dp
-        margin-bottom: 20px
         .fusion-meta-info
             display: none
 
