--- a/aliem/styles/collections/sidebar.styl
+++ b/aliem/styles/collections/sidebar.styl
@@ -14,7 +14,7 @@
         background: white
         margin: 0 0 15px 0
         &.widget_text:nth-of-type(2)
-            padding: 0
+            padding: 10px 0
         // feminem job board
         &.widget_text:nth-of-type(3)
             background: $feminem-secondary
