--- a/aliem/styles/collections/plugins.styl
+++ b/aliem/styles/collections/plugins.styl
@@ -35,3 +35,6 @@
     span
         line-height: 40px !important
         font-size: 1.3em !important
+
+.plot-container.plotly
+    margin-bottom: 20px !important
