Update avada person styles

--- a/aliem/styles/style.styl
+++ b/aliem/styles/style.styl
@@ -3,7 +3,7 @@
 @require 'collections/colors'
 @require 'collections/variables'
 @require 'collections/social-icons'
-@require 'collections/avada'
+@require 'collections/avada/'
 @require 'collections/plugins'
 
 @require 'collections/header'
