update footer + dev files

--- a/aliem/styles/collections/avada/default.styl
+++ b/aliem/styles/collections/avada/default.styl
@@ -7,13 +7,6 @@
 #toTop:hover, #wrapper .search-table .search-button input[type='submit']:hover, .circle-yes ul li:before, .fusion-accordian .panel-title .active .fa-fusion-box, .pagination .current, .progress-bar-content, .table-2 table thead, .tagcloud a:hover, ul.arrow li:before, ul.circle-yes li:before
     background-color: $primary
 
-.fusion-footer-widget-area
-    background-color: #363839
-    border-color: #e9eaee
-    border-top-width: 12px
-    padding-top: 20px
-    padding-bottom: 20px
-
 .sep-boxed-pricing .panel-heading
     background-color: $primary
     border-color: $primary
@@ -47,12 +40,6 @@
 .link-type-button-bar .fusion-read-more:hover, .link-type-button-bar .fusion-read-more:hover:after, .link-type-button-bar .fusion-read-more:hover:before, .link-type-button-bar.link-area-box:hover .fusion-read-more, .link-type-button-bar.link-area-box:hover .fusion-read-more:after, .link-type-button-bar.link-area-box:hover .fusion-read-more:before
     color: white !important
 
-#slidingbar-area .widget-title, #slidingbar-area h3, .fusion-footer-widget-area .widget-title, .fusion-footer-widget-area h3
-    font-size: 13px
-    font-weight: 400
-    line-height: 1.5
-    letter-spacing: 0px
-
 #wrapper .side-nav li a
     font-size: 14px
 
@@ -70,9 +57,6 @@
 
 .fusion-copyright-notice
     font-size: 12px
-
-#main .fusion-row, #slidingbar-area .fusion-row, .fusion-footer-copyright-area .fusion-row, .fusion-footer-widget-area .fusion-row, .fusion-page-title-row, .tfs-slider .slide-content-container .slide-content
-    max-width: 1100px
 
 #wrapper #main #comments .fusion-title h3, #wrapper #main #respond .fusion-title h3, #wrapper #main .about-author .fusion-title h3, #wrapper #main .related-posts .fusion-title h3, #wrapper #main .related.products .fusion-title h3
     font-size: 18px
@@ -224,12 +208,6 @@ body.has-sidebar.double-sidebars #main #sidebar-2
 
 #main
     padding-bottom: 40px
-
-.side-header-left .fusion-footer-parallax, body.side-header-left #wrapper
-    margin-left: 280px
-
-.side-header-right .fusion-footer-parallax, body.side-header-right #wrapper
-    margin-right: 280px
 
 body.side-header-left #side-header #nav .login-box, body.side-header-left #side-header #nav .main-nav-search-form, body.side-header-left #side-header #nav>ul>li>ul
     left: 279px
@@ -405,9 +383,6 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
     .table-2 td, .table-2 th
         white-space: nowrap
 
-    #main, .footer-area, .page-title-bar, body
-        background-attachment: scroll !important
-
     .tfs-slider[data-animation='slide']
         height: auto !important
 
@@ -483,17 +458,6 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
     .review
         float: none
         width: 100%
-
-    .fusion-social-links-footer, .fusion-social-networks
-        display: block
-        text-align: center
-
-    .fusion-social-links-footer
-        width: auto
-
-    .fusion-social-links-footer .fusion-social-networks
-        display: inline-block
-        float: none
 
     .fusion-social-networks
         padding: 0 0 15px
@@ -650,12 +614,6 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
     nav#nav, nav#sticky-nav
         margin-right: 0
 
-    #footer .social-networks
-        width: 100%
-        margin: 0 auto
-        position: relative
-        left: -11px
-
     .tab-holder .tabs
         height: auto !important
         width: 100% !important
@@ -767,9 +725,6 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
     .fusion-columns-3 .fusion-column:nth-of-type(4n), .fusion-columns-3 .fusion-flip-box-wrapper:nth-of-type(4n), .fusion-columns-5 .fusion-column:nth-of-type(4n), .fusion-columns-5 .fusion-flip-box-wrapper:nth-of-type(4n), .fusion-columns-6 .fusion-column:nth-of-type(4n), .fusion-columns-6 .fusion-flip-box-wrapper:nth-of-type(4n)
         clear: both
 
-    #slidingbar .fusion-column, .footer-area .fusion-column
-        margin-bottom: 40px
-
     .fusion-layout-column.fusion-five-sixth, .fusion-layout-column.fusion-four-fifth, .fusion-layout-column.fusion-one-fifth, .fusion-layout-column.fusion-one-fourth, .fusion-layout-column.fusion-one-half, .fusion-layout-column.fusion-one-sixth, .fusion-layout-column.fusion-one-third, .fusion-layout-column.fusion-three-fifth, .fusion-layout-column.fusion-three-fourth, .fusion-layout-column.fusion-two-fifth, .fusion-layout-column.fusion-two-third
         position: relative
         float: left
@@ -855,20 +810,6 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
     .fusion-column.fusion-spacing-no
         margin-bottom: 0
         width: 100% !important
-
-    .ua-mobile #main, .ua-mobile .fusion-footer-widget-area, .ua-mobile .page-title-bar, .ua-mobile body
-        background-attachment: scroll !important
-
-    #footer>.fusion-row, #header-sticky .fusion-row, .footer-area>.fusion-row, .fusion-header .fusion-row, .fusion-secondary-header .fusion-row
-        padding-left: 0px !important
-        padding-right: 0px !important
-
-    #footer>.fusion-row, .footer-area>.fusion-row, .fusion-header .fusion-row, .fusion-secondary-header .fusion-row
-        padding-left: 0px !important
-        padding-right: 0px !important
-
-    #main, .fullwidth-box, .fusion-footer-widget-area, .page-title-bar, body
-        background-attachment: scroll !important
 
 @media only screen and (max-width: 800px)
     body.side-header #wrapper
@@ -1050,10 +991,6 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
         padding-left: 0
         padding-right: 0
         max-width: 100%
-
-    .fusion-footer-copyright-area>.fusion-row, .fusion-footer-widget-area>.fusion-row
-        padding-left: 0
-        padding-right: 0
 
     .fusion-secondary-header .fusion-row
         display: block
@@ -1305,7 +1242,7 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
     .fusion-columns .fusion-column:not(.fusion-column-last)
         margin: 0 0 50px
 
-    #slidingbar-area .columns .col, .avada-container .columns .col, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-6, .footer-area .fusion-columns .fusion-column, .fusion-columns-5 .col-lg-2, .fusion-columns-5 .col-md-2, .fusion-columns-5 .col-sm-2
+    #slidingbar-area .columns .col, .avada-container .columns .col, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-6, .fusion-columns-5 .col-lg-2, .fusion-columns-5 .col-md-2, .fusion-columns-5 .col-sm-2
         float: none
         width: 100%
 
@@ -1431,18 +1368,6 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
         float: none
         width: 100%
 
-    .fusion-body .fusion-social-links-footer, .fusion-copyright-notice
-        display: block
-        text-align: center
-
-    .fusion-social-links-footer
-        width: auto
-
-    .fusion-social-links-footer .fusion-social-networks
-        display: inline-block
-        float: none
-        margin-top: 0
-
     .fusion-copyright-notice
         padding: 0 0 15px
 
@@ -1566,12 +1491,6 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
     .ls-avada .ls-nav-next, .ls-avada .ls-nav-prev
         display: none !important
 
-    #footer .social-networks
-        width: 100%
-        margin: 0 auto
-        position: relative
-        left: -11px
-
     .tab-holder .tabs
         height: auto !important
         width: 100% !important
@@ -1664,9 +1583,6 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
     .fusion-soundcloud iframe
         width: 100%
 
-    .ua-mobile #main, .ua-mobile .footer-area, .ua-mobile .fusion-page-title-bar, .ua-mobile body
-        background-attachment: scroll !important
-
     #side-header .fusion-mobile-logo-1 .fusion-mobile-logo-1x, .fusion-mobile-logo-1 .fusion-mobile-logo-1x
         display: none
 
@@ -1706,10 +1622,6 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
         width: 100% !important
         margin: 0 0 50px
         box-sizing: border-box
-
-    #slidingbar-area .fusion-columns .fusion-column, .footer-area .fusion-columns .fusion-column
-        float: left
-        width: 98% !important
 
     .fullwidth-box
         background-attachment: scroll !important
@@ -1841,18 +1753,8 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
     .ls-avada .ls-nav-next, .ls-avada .ls-nav-prev
         display: none !important
 
-    #footer .social-networks
-        width: 100%
-        margin: 0 auto
-        position: relative
-        left: -11px
-
     .recent-works-items a
         max-width: 64px
-
-    #slidingbar-area .flickr_badge_image img, .footer-area .flickr_badge_image img
-        max-width: 64px
-        padding: 3px !important
 
     .tab-holder .tabs
         height: auto !important
@@ -1925,9 +1827,6 @@ body.side-header-left #slidingbar .avada-row, body.side-header-right #slidingbar
 
     #wrapper .ei-slider
         width: 100%
-
-    #main, .fullwidth-box, .fusion-footer-widget-area, .page-title-bar, body
-        background-attachment: scroll !important
 
     .gravity-select-parent .select-arrow
         height: 24px
