--- a/aliem/styles/collections/colors.styl
+++ b/aliem/styles/collections/colors.styl
@@ -5,6 +5,7 @@ $tertiary = #F5F5F5
 $font-primary = #333
 $font-gray = #706d6e // header font color
 $font-secondary = #666
+$footer-gray = #363839
 
 $feminem-secondary = #ccccff
 
