--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -55,6 +55,14 @@
     padding-top: 135px
     background: $secondary
 
+#main .fusion-row,
+#slidingbar-area .fusion-row,
+.fusion-footer-copyright-area .fusion-row,
+.fusion-footer-widget-area .fusion-row,
+.fusion-page-title-row,
+.tfs-slider .slide-content-container .slide-content
+    max-width: 1100px
+
 #content
     margin-top: 20px
     width: 75%
