--- a/aliem/styles/collections/footer.styl
+++ b/aliem/styles/collections/footer.styl
@@ -4,17 +4,25 @@
         padding: 0 30px
 
 .fusion-footer-widget-area
+    background-color: $footer-gray
+    border-top-width: 12px
+    padding-top: 20px
+    padding-bottom: 20px
     border-top: 0 !important
     line-height: 20px
     .widget-title
-        letter-spacing: 1px
-        margin: 0
+        letter-spacing: 1.3px
+        margin-bottom: 20px
+    .textwidget
+        font-size: 0.9em
+        a
+            font-weight: 600
+            &:hover
+                text-decoration: underline
+                color: #bfbfbf
 
 .fusion-footer-widget-column
     margin-bottom: 0
-
-.fusion-footer .widget_text
-    border-bottom: 0 !important
 
 // Fixed mobile footer padding
 .footer-area
