Begin working on fusion elements

--- a/aliem/styles/collections/colors.styl
+++ b/aliem/styles/collections/colors.styl
@@ -6,6 +6,7 @@ $font-primary = #333
 $font-gray = #706d6e // header font color
 $font-secondary = #666
 $footer-gray = #363839
+$dark-blue = #345995
 
 $feminem-secondary = #ccccff
 
