--- a/aliem/styles/style.styl
+++ b/aliem/styles/style.styl
@@ -5,6 +5,7 @@
 @require 'collections/social-icons'
 @require 'collections/avada/'
 @require 'collections/plugins'
+@require 'collections/shortcodes/'
 
 @require 'collections/header'
 @require 'collections/home'
@@ -14,8 +15,6 @@
 @require 'collections/flex'
 @require 'collections/tables'
 @require 'collections/typography'
-
-// TODO: look into creating a custom aliem loading animation for plots
 
 // Form Controls
 input
