add custom button shortcode

--- a/aliem/styles/collections/colors.styl
+++ b/aliem/styles/collections/colors.styl
@@ -8,6 +8,10 @@ $font-secondary = #666
 $footer-gray = #363839
 $dark-blue = #345995
 
+// Buttons
+$button-active    = rgba(0, 0, 0, .12)
+$button-disabled  = #a0a5aa
+
 $feminem-secondary = #ccccff
 
 $social-icons = {
