add flex column shortcodes

--- a/aliem/styles/collections/colors.styl
+++ b/aliem/styles/collections/colors.styl
@@ -6,7 +6,8 @@ $font-primary = #333
 $font-gray = #706d6e // header font color
 $font-secondary = #666
 $footer-gray = #363839
-$dark-blue = #345995
+$blue-1 = #345995
+$blue-2 = #0079b2
 
 // Buttons
 $button-active    = rgba(0, 0, 0, .12)
