--- a/aliem/styles/collections/shortcodes/box.styl
+++ b/aliem/styles/collections/shortcodes/box.styl
@@ -4,10 +4,10 @@
     margin-bottom: 1.5em
     display: inline-block
     color: white
-    background: $dark-blue
+    background: $blue-1
     padding: 20px
     p:last-of-type
         margin: 0 !important
 
 .box--secondary
-    background: #0079b2
+    background: $blue-2
