--- a/aliem/styles/collections/shortcodes/flipbox.styl
+++ b/aliem/styles/collections/shortcodes/flipbox.styl
@@ -1,14 +1,12 @@
 @require '../colors';
 
 $width = 320px
-$height = 350px
 $flip-speed = 0.4s
 
 .flip-box
     perspective: 1000px
     transform-style: preserve-3d
     width: $width
-    min-height: $height
     margin-bottom: 1.5em
     &:hover
         .flip-box__inner--front
@@ -23,7 +21,6 @@ $flip-speed = 0.4s
 
 .flip-box__inner
     width: $width
-    min-height: $height
     backface-visibility: hidden
     transition: $flip-speed
     transform-style: preserve-3d
@@ -44,5 +41,5 @@ $flip-speed = 0.4s
 .flip-box__inner--back
     animation-name: flip
     transform: rotateY(-180deg)
-    background: $dark-blue
+    background: $blue-1
     color: white
