Add shortcodes mimicking avada (#88)
* Begin working on fusion elements

* add colored boxes

* add custom button shortcode

* add flex column shortcodes

* fix breaking avada issues

* remove feminem campaign

--- a/aliem/styles/collections/colors.styl
+++ b/aliem/styles/collections/colors.styl
@@ -6,6 +6,12 @@ $font-primary = #333
 $font-gray = #706d6e // header font color
 $font-secondary = #666
 $footer-gray = #363839
+$blue-1 = #345995
+$blue-2 = #0079b2
+
+// Buttons
+$button-active    = rgba(0, 0, 0, .12)
+$button-disabled  = #a0a5aa
 
 $feminem-secondary = #ccccff
 
