update flipbox colors + last min deploy changes

--- a/aliem/styles/collections/shortcodes/flipbox.styl
+++ b/aliem/styles/collections/shortcodes/flipbox.styl
@@ -36,10 +36,10 @@ $flip-speed = 0.4s
     z-index: 2
     transform: rotateY(0deg)
     animation-name: flop
-    background: $tertiary
+    background: $primary
+    color: white
 
 .flip-box__inner--back
     animation-name: flip
     transform: rotateY(-180deg)
-    background: $blue-1
-    color: white
+    background: $tertiary
