--- a/aliem/styles/collections/avada/index.styl
+++ b/aliem/styles/collections/avada/index.styl
@@ -8,3 +8,13 @@
 
 .fusion-menu-description
     display: none
+
+@font-face
+    font-family: 'icomoon'
+    src: url('./vendor/icomoon/icomoon.eot')
+    src: url('./vendor/icomoon/icomoon.eot?#iefix') format('embedded-opentype'),
+         url('./vendor/icomoon/icomoon.woff') format('woff'),
+         url('./vendor/icomoon/icomoon.ttf') format('truetype'),
+         url('./vendor/icomoon/icomoon.svg#icomoon') format('svg')
+    font-weight: normal
+    font-style: normal
